<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_weight="1.4">

        <TextView
            android:id="@+id/txtSum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="@dimen/dp3"
            android:paddingRight="@dimen/dp3"
            android:paddingStart="@dimen/dp3"
            android:paddingLeft="@dimen/dp3"
            android:textSize="@dimen/textSize"
            tools:text="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:background="@color/light_grey_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgOperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp3"
                android:layout_marginStart="@dimen/dp3"
                android:layout_marginLeft="@dimen/dp3"
                android:layout_gravity="center" />
        <TextView
            android:id="@+id/txtValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:maxLength="10"
            android:paddingEnd="@dimen/dp3"
            android:paddingRight="@dimen/dp3"
            android:paddingStart="@dimen/dp3"
            android:paddingLeft="@dimen/dp3"
            android:gravity="end|center"
            android:textSize="@dimen/textSize"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickClear"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/percentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/percentage"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="@dimen/textSize"/>
            <ImageView
                android:id="@+id/imgBackSpace"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="30dp"
                android:onClick="onClickBackSpace"
                app:srcCompat="@drawable/ic_backspace"/>
            <ImageView
                android:id="@+id/imgDivision"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="30dp"
                android:onClick="onClickDiv"
                app:srcCompat="@drawable/ic_division"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_7"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickSeven"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_8"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickEight"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_9"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickNine"
                android:textSize="@dimen/textSize"/>
            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="30dp"
                android:onClick="onClickAdd"
                app:srcCompat="@drawable/ic_add"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:onClick="onClickFour"
                android:textSize="@dimen/textSize" />

            <TextView
                android:id="@+id/txtFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_5"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickFive"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_6"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickSix"
                android:textSize="@dimen/textSize"/>
            <ImageView
                android:id="@+id/imgMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="30dp"
                android:onClick="onClickSub"
                app:srcCompat="@drawable/ic_minus"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_1"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickOne"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_2"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickTwo"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_3"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickThree"
                android:textSize="@dimen/textSize"/>

            <ImageView
                android:id="@+id/imgMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClickMulti"
                android:padding="30dp"
                app:srcCompat="@drawable/ic_multiply" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_0"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickZero"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtDoubleZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/_00"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickZeroZero"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/txtPoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="onClickPoint"
                android:textSize="@dimen/textSize"/>

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="30dp"
                android:onClick="onClickEqual"
                app:srcCompat="@drawable/ic_equal"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>